# funkplot

./: .gitignore  AbstractDrawer.cpp  AbstractDrawer.h  CMakeLists.txt  CodeEditorTabPage.cpp  CodeEditorTabPage.h  CodeEngine.cpp  CodeEngine.h  DrawingForm.cpp  DrawingForm.h  DrawingForm.ui  Executor.h  FrameForLineNumbers.cpp  FrameForLineNumbers.h  Function.cpp  Function.h  GraphicsViewZoom.cpp  GraphicsViewZoom.h  HashTable.h  Highlighter.cpp  Highlighter.h  Howto.appimageize.txt  Interval.h  Keywords.h  LICENSE  List.h  ListWidgetForCodeCompletion.cpp  ListWidgetForCodeCompletion.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyGraphicsView.cpp  MyGraphicsView.h  OrbitTransformController.h  PaletteListForm.cpp  PaletteListForm.ui  PlotRenderer.cpp  PlotRenderer.h  Problem.h  Program.cpp  (+29 more)
.github/workflows/: cmake.yml
HttpServer/src/: CMakeLists.txt
HttpServer/src/httpServer/: CMakeLists.txt  const.h  httpConnection.cpp  httpConnection.h  httpCookie.h  httpRequest.cpp  httpRequest.h  httpRequestHandler.h  httpRequestRouter.h  httpResponse.cpp  httpServer.cpp  httpServerConfig.h
KDDockWidgets/: CMakeLists.txt
KDDockWidgets/src/private/indicators/: SegmentedIndicators.cpp
KDDockWidgets/src/private/multisplitter/: Widget.h
KDDockWidgets/src/private/widgets/: QWidgetAdapter_widgets_p.h
compiler/: CMakeLists.txt  ImageDrawer.cpp  ImageDrawer.h  compiler.cpp  compiler.qrc
debian/: changelog  control  copyright  funkplot-gui.desktop  funkplot.xml  install  links  postinst  rules
docker/: Dockerfile
flatpak/: org.unafrog.funkplot.yml
gui/: 2dcurves.json  AboutDialog.cpp  AboutDialog.ui  Builtin.cpp  Builtin.h  BuiltinDictionary.h  BuiltinFunctionDetailer.cpp  BuiltinFunctionDetailer.h  BuiltinFunctionDetailer.ui  CMakeLists.txt  CodeEditorTabPage.cpp  CodeEditorTabPage.h  CodeEditorTabPage.ui  DrawingForm.cpp  DrawingForm.h  DrawingForm.ui  ExportImageDialog.cpp  ExportImageDialog.h  ExportImageDialog.ui  FrameForLineNumbers.cpp  FrameForLineNumbers.h  GraphicsViewZoom.cpp  HelpWindow.cpp  HelpWindow.h  HelpWindow.ui  Highlighter.cpp  Highlighter.h  ListWidgetForCodeCompletion.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MouseSensitiveLabel.cpp  MouseSensitiveLabel.h  MyGraphicsView.cpp  MyGraphicsView.h  PaletteListForm.cpp  PaletteListForm.h  PaletteListForm.ui  PlotRenderer.cpp  PlotRenderer.h  (+18 more)
help/: CMakeLists.txt  first_steps.html  funkplot.qch  funkplot.qhc  funkplot.qhcp  funkplot.qhp  geodraw.qch  geodraw.qhc  geodraw.qhcp  geodraw.qhp  header.html  img_baser.py  intro.html  keyword_foreach.html  keyword_function.html  keyword_plot.html  keyword_set.html  main.py  o-first_steps.html  o-intro.html  syntax.html
help/html/: about.html  attributions.html  colors.html  error_messages.html  first_steps.html  gui.html  intro.html  keywords.html  kw_for.html  kw_function.html  kw_if.html  kw_let.html  kw_plot.html  kw_rotate.html  kw_script.html  kw_set.html  kw_var.html  misc.html  palettes.html  program.html
help/md4c/src/: CMakeLists.txt
help/mds/: about.md  amalgamated.md  attributions.md  error_messages.md  first_steps.md  generator.md  gui.md  intro.md  keywords.md  kw_append.md  kw_for.md  kw_function.md  kw_if.md  kw_let.md  kw_plot.md  kw_rotate.md  kw_script.md  kw_set.md  kw_var.md  program.md
lib/: AbstractDrawer.cpp  AbstractDrawer.h  Append.cpp  Append.h  ArithmeticAssignment.cpp  ArithmeticAssignment.h  ArithmeticAssignmentToArrayElement.cpp  ArithmeticAssignmentToArrayElement.h  ArrayAssignment.cpp  ArrayAssignment.h  ArrayIteratorLoopTarget.cpp  ArrayIteratorLoopTarget.h  Assignment.cpp  Assignment.h  CMakeLists.txt  CodeEngine.cpp  CodeEngine.h  Done.cpp  Done.h  DrawnLine.h  DrawnPoint.h  DrawnText.h  Else.cpp  Else.h  ErrorManager.h  Executor.h  Function.cpp  Function.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionIteratorLoopTarget.cpp  FunctionIteratorLoopTarget.h  HashTable.h  If.cpp  If.h  ImageDrawer.cpp  ImageDrawer.h  IndexedAccess.h  Keywords.h  List.h  (+40 more)
lib/python/: PythonRunner.cpp  PythonRunner.h  PythonScript.cpp  PythonScript.h  pyembed.cpp  pyembed.h
ribbon/examples/Test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  tabtoolbar.json
ribbon/include/TabToolbar/: API.h  Builder.h  Group.h  Page.h  StyleTools.h  Styles.h  SubGroup.h  TabToolbar.h
ribbon/src/TabToolbar/: Builder.cpp  CMakeLists.txt  CompactToolButton.cpp  CompactToolButton.h  Group.cpp  Page.cpp  StyleTemplate.qrc  StyleTemplate.qss  StyleTools.cpp  Styles.cpp  SubGroup.cpp  TabToolbar.cpp  ToolButtonStyle.cpp  ToolButtonStyle.h
samples/: dots.fnk  flower.fnk  hair.fnk  lissajous.fnk  square.fnk  waves.fnk
scripts/: builtins.py  used_palettes.py
site/: home.css  index.html  live.html  package.json
snap/: snapcraft.yaml
test/: CMakeLists.txt  tests.cpp
upals/: chroma.map  firestrm.map  froth6.map
web/: CMakeLists.txt  RequestHandler.cpp  RequestHandler.h  amalgamated.html  index.html  main.cpp  web.qrc
